--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,11 @@
+:root {
+    --light-pink: #cb7584;
+}
+
 .title {
     font-family: "Staatliches";
     font-style: italic;
-    color: #cb7584;
+    color: var(--light-pink);
 }
 
 a {
@@ -20,7 +24,7 @@ a {
 
 .route {
     font-family: 'Kdam Thmor Pro';
-    color: #cb7584;
+    color: var(--light-pink);
     transition: all 400ms;
 }
 
@@ -43,7 +47,8 @@ li:hover {
 }
 
 main {
-    background: url('../assets/home.jpg') no-repeat center top;;
+    background: url('../assets/home.jpg') no-repeat center top;
+    background-attachment: fixed;
 
 }
 
@@ -51,7 +56,7 @@ main {
     text-align: center;
     font-size: 120px;
     font-family: 'Titan One', cursive;
-    color: #cb7584;
+    color: var(--light-pink);
     text-shadow: 7px 7px 5px #6c3c44;
     font-style: italic;
 }
@@ -60,7 +65,7 @@ main {
     text-align: center;
     font-size: 80px;
     font-family: 'Titan One', cursive;
-    color: #cb7584;
+    color: var(--light-pink);
     text-shadow: 7px 7px 5px #6c3c44;
 }
 
@@ -81,13 +86,132 @@ main {
 
 .links-btn:hover {
     transform: scale(1.1,1.1);
-    border: 3px #cb7584 solid;
+    border: 3px var(--light-pink) solid;
 }
 
 .span-text {
     margin-left: 15px;
     font-size: 45px;
     font-family: 'Kdam Thmor Pro';    
-    color: #cb7584;
+    color: var(--light-pink);
 
+}
+
+.about-me {
+    height: 100vh;
+}
+
+.about-me article {
+    margin-top: 5%;
+}
+
+.about-title {
+    font-size: 90px;
+    font-family: 'Gloria Hallelujah';
+    text-align: center;
+    color: var(--light-pink);
+}
+
+hr {
+    color: #252850;
+    border-top: 10px solid #252850;
+}
+
+.texts {
+    width: 50%;
+}
+
+.info {
+    padding: 100px 0;
+    background: #000;
+    border-radius: 40px;
+    display: flex;
+    justify-content: space-around;
+    opacity: 0.9;
+}
+
+.paragrahp {
+    font-family: 'PT Sans Narrow';
+    font-size: 25px;
+    color: #fff;
+}
+
+
+.personal-img {
+    border: 5px solid var(--light-pink);
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+}
+
+big {
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.habilidades {
+    height: 100vh;
+}
+
+.skills-tec {
+    background: #000;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap: 25px;
+    width: 43%;
+    padding: 20px 0px 20px 35px;
+    border-radius: 40px;
+    opacity: 0.9;
+}
+
+.nextjs {
+    width: 48px;
+    height: 48px;
+}
+
+.row1 {
+    grid-column: 1/2;
+    grid-row-gap: 20px;
+}
+
+.row2 {
+    grid-column: 2/3;
+}
+
+.skills-row {
+    display: grid;
+    grid-template-columns: 25% 75%;
+}
+
+.skills-row img {
+    height: 48px;
+    width: 48px;
+}
+
+.skill-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.soft-skills {
+    background: #000;
+    text-align: center;
+    width: 75%;
+    padding: 20px 0;
+    border-radius: 40px;
+    opacity: 0.9;
+    margin: auto;
+}
+
+b {
+    color: #454e74;
+}
+
+.lenguajes {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    background: #000;
+    text-align: center;
 }
