--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -213,5 +213,16 @@ b {
     display: flex;
     flex-direction: column;
     background: #000;
-    text-align: center;
+    padding: 30px;
+    border-radius: 40px;
+    opacity: 0.9;
+}
+
+.len-habilities {
+    display: flex;
+    justify-content: space-between;
+}
+
+.proyectos {
+    height: 100vh;
 }
