--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -224,5 +224,63 @@ b {
 }
 
 .proyectos {
-    height: 100vh;
+    height: 230vh;
+}
+
+.pro-card {
+    width: 35%;
+    height: 450px;
+    background: #000;
+    padding: 20px;
+    border-radius: 40px;
+    opacity: 0.9;
+    transition: all 400ms;
+}
+
+.pro-card:hover {
+    border: 2px solid #cb7584;
+    transform: scale(1.1,1.1);
+}
+
+.card-image {
+    width: 100%;
+    height: 200px;
+    border-radius: 40px;
+}
+
+.pro-description {
+    text-align: center;
+}
+
+.pro-title {
+    font-size: 30px;
+}
+
+.proyects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.links-btn-pro {
+    background: none;
+    border: solid 3px #fff;
+    border-radius: 60px;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    transition: all 400ms;
+}
+
+.span-text-pro {
+    margin-left: 15px;
+    font-size: 25px;
+    font-family: 'Kdam Thmor Pro';    
+    color: var(--light-pink);
+}
+
+.links-btn-pro:hover {
+    transform: scale(1.1, 1.1);
+    border: 2px solid var(--light-pink);
 }
