--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -245,7 +245,7 @@ b {
 .card-image {
     width: 100%;
     height: 200px;
-    border-radius: 40px;
+    border-radius: 10px;
 }
 
 .pro-description {
@@ -283,4 +283,50 @@ b {
 .links-btn-pro:hover {
     transform: scale(1.1, 1.1);
     border: 2px solid var(--light-pink);
+}
+
+.contact-me {
+    height: 70vh;
+}
+
+.btn {
+    display: flex;
+    align-items: center;
+}
+
+.ways-to-contact {
+    background: #000;
+    border-radius: 40px;
+    opacity: 0.9;
+    padding: 20px;
+    width: 60%;
+}
+
+.gm {
+    height: 64px;
+    width: 64px;
+}
+
+.gmail {
+    color: var(--light-pink);
+    font-size: 40px;
+}
+
+.btn-hover-css:hover {
+    border: 2px #fff solid;
+    border-radius: 60px;
+}
+
+.location {
+    width: 30%;
+    background: #000;
+    opacity: 0.9;
+    padding: 20px;
+    border-radius: 40px;
+    text-align: center;
+}
+
+.lo {
+    width: 48px;
+    height: 48px;
 }
