--- a/src/styles/ResponsiveDesign.css
+++ b/src/styles/ResponsiveDesign.css
@@ -1,6 +1,6 @@
 /*{Laptop Design}*/
 
-@media screen and (min-width: 992px) and (max-height: 769px){
+@media screen and (min-width: 992px) and (max-height: 769px) {
     .about-me {
         height: 120vh;
     }
@@ -21,7 +21,7 @@
         width: 55%;
         height: 35%;
     }
-    
+
     .proyectos {
         height: 270vh;
     }
@@ -33,7 +33,7 @@
 
 /*{For my laptop design}*/
 
-@media screen and (max-width: 1366px) and (max-height: 768px){
+@media screen and (max-width: 1366px) and (max-height: 768px) {
     .about-me {
         height: 130vh;
     }
@@ -62,7 +62,7 @@
         display: block;
     }
 
-    .skills{
+    .skills {
         position: fixed;
         width: 100%;
         height: 0vh;
@@ -81,11 +81,11 @@
         display: none;
     }
 
-    #check:checked ~ .skills {
+    #check:checked~.skills {
         height: 100vh;
     }
 
-    #check:checked ~ .skills li {
+    #check:checked~.skills li {
         display: block;
     }
 
@@ -93,13 +93,141 @@
         font-size: 30px;
     }
 
-    a:hover, a:active {
+    a:hover,
+    a:active {
         background: none;
         color: #fff;
     }
 }
 
-@media only screen and (min-width: 768px) {
-    
-}
+/*{Movile Devices}*/
 
+@media screen and (max-width: 480px) {
+    main{
+        max-width: 100vw;
+    }
+
+    .home-title {
+        font-size: 80px;
+    }
+
+    .home-skill {
+        font-size: 50px;
+    }
+
+    .links {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .btn-link {
+        margin: 0;
+        margin-top: 20px;
+    }
+
+    .info {
+        display: grid;
+        grid-template-rows: 25% 1fr;
+        grid-row-gap: 20px;
+    }
+
+    .personal-img {
+        margin: auto;
+    }
+
+    .texts {
+        margin: auto;
+        width: 100%;
+        max-width: 80%;
+    }
+
+    .about-me {
+        height: 200vh;
+    }
+
+    .habilidades {
+        height: 190vh;
+    }
+
+    .habilidades h1 {
+        font-size: 80px;
+    }
+    
+    .len-habilities {
+        display: flex;
+        flex-direction: column;
+        margin-top: 30px;
+    }
+
+    .skills-tec {
+        width: 100%;
+    }
+
+    .row1 {
+        grid-row-gap: 20px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .row2 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .skills-row {
+        display: grid;
+        grid-template-columns: 25% 75%;
+    }
+
+    .lenguajes {
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .soft-skills {
+        width: 100%;
+    }
+
+    .proyectos {
+        height: 300vh;
+    }
+
+    .pro-card {
+        width: 100%;
+        max-width: 80%;
+    }
+
+    .links-btn-pro {
+        margin: auto;
+    }
+
+    .contact-me {
+        height: 130vh;
+    }
+
+    .contact-me h1 {
+        font-size: 60px;
+    }
+
+    .contact {
+        flex-direction: column;
+    }
+
+    .ways-to-contact {
+        width: 100%;
+    }
+
+    .gmail {
+        font-size: 30px;
+    }
+
+    .contacts span {
+        font-size: 30px;
+    }
+
+    .location {
+        width: 100%;
+        margin-top: 3.5rem;
+    }
+}
