--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,12 @@
     color: var(--light-pink);
 }
 
+.icon {
+    font-size: 30px;
+    color: #fff;
+    margin-top: 30px;
+}
+
 a {
     text-decoration: none;
 }
