--- a/src/styles/ResponsiveDesign.css
+++ b/src/styles/ResponsiveDesign.css
@@ -1,8 +1,8 @@
 /*{Laptop Design}*/
 
-@media screen and (min-width: 992px) and (max-height: 769px) {
+@media screen and (max-width: 992px){
     .about-me {
-        height: 120vh;
+        height: 160vh;
     }
 
     .skills-tec {
@@ -262,7 +262,7 @@
     }
 
     .about-me {
-        height: 160vh;
+        height: 180vh;
     }
 
     .habilidades {
