--- a/src/styles/ResponsiveDesign.css
+++ b/src/styles/ResponsiveDesign.css
@@ -121,6 +121,10 @@
         margin: auto;
     }
 
+    .links a {
+        text-align: center;
+    }
+
     .btn-link {
         margin: 0;
         margin-top: 20px;
